--- a/src/app/pages/professor/professor-lista/professor-lista.component.html
+++ b/src/app/pages/professor/professor-lista/professor-lista.component.html
@@ -19,7 +19,7 @@
     <ng-template pTemplate="body" let-prof>
       <tr>
         <td>
-          <button pButton type="button" class="p-button-text p-button-warning"
+          <button pButton type="button" class="p-button-rounded p-button-primary"
           ptooltip="Editar" icon="pi pi-pencil" tooltipPosition="top" 
           [routerLink]="['/professores', prof.id]"></button>
         </td>
